--- a/Job/css/styles.css
+++ b/Job/css/styles.css
@@ -55,12 +55,43 @@ body {
   margin-top:-30px;
 }
 /* END HEADER */
+#menu-tile, #specials-tile, #map-tile {
+  height: 250px;
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+}
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-tile {
+  background: url('../images/UofA.JPG') no-repeat;
+  background-position: center;
+}
+#specials-tile {
+  background: url('../images/cmp.JPG') no-repeat;
+  background-position: center;
+}
+
+#menu-tile span, #specials-tile span, #map-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
 /********** Large devices only **********/
 @media (min-width: 1200px) {
-  body{
-    padding-top:Srem;
+  .container .jumbotron {
     background: url('../images/cali_1200.JPG') no-repeat;
-    background-size: cover;
     height: 675px;
   }
 }
@@ -68,21 +99,24 @@ body {
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
   /* Header */
-  body{
+  /* End Header */
+
+  /* Home Page */
+  .container .jumbotron {
     background: url('../images/cali_992.JPG') no-repeat;
     height: 558px;
-    background-size: cover;
   }
-  /* End Header */
+  /* End Home Page */
 }
-
 /********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-  body {
+  /* Home Page */
+  .container .jumbotron {
     background: url('../images/cali_768.JPG') no-repeat;
     height: 432px;
-    background-size: cover;
   }
+  /* End Home Page */
+
 }
 
 /********** Extra small devices only **********/
@@ -90,13 +124,20 @@ body {
   /* Header */
   .navbar-brand {
     padding-top: 10px;
-    height: 60px;
-    
+    height: 80px;
   }
-  .navbar-brand h1 { /* Name */
-    padding-top: 0px;
+  .navbar-brand h1 { /* Restaurant name */
+    padding-top: 10px;
     font-size: 5vw; /* 1vw = 1% of viewport width */
   }
+  .navbar-brand p { /* Kosher cert */
+    font-size: .6em;
+    margin-top: 12px;
+  }
+  .navbar-brand p img { /* Star-K */
+    height: 20px;
+  }
+
   #collapsable-nav a { /* Collapsed nav menu text */
     font-size: 1.2em;
   }
@@ -104,6 +145,49 @@ body {
     font-size: 1em;
     margin-right: 5px;
   }
+
+  #call-btn > a {
+    font-size: 1.5em;
+    display: block;
+    margin: 0 20px;
+    padding: 10px;
+    border: 2px solid #fff;
+    background-color: #f6b319;
+    color: #951c49;
+  }
+  #xs-deliver {
+    margin-top: 5px;
+    font-size: .7em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+  }
   /* End Header */
+
   /* Home Page */
+  .container .jumbotron {
+    margin-top: 30px;
+    padding: 0;
+  }
+
+  #menu-tile, #specials-tile {
+    width: 360px;
+    margin: 0 auto 15px;
+  }
+
 }
+/********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
+@media (max-width: 479px) {
+  /* Header */
+  .navbar-brand h1 { /* name */
+    padding-top: 5px;
+    font-size: 6vw;
+  }
+  /* End Header */
+  
+  /* Home page */
+  #menu-tile, #specials-tile {
+    width: 280px;
+    margin: 0 auto 15px;
+  }
+}
+
