--- a/Job/css/styles.css
+++ b/Job/css/styles.css
@@ -55,6 +55,35 @@ body {
   margin-top:-30px;
 }
 /* END HEADER */
+/* FOOTER */
+.panel-footer {
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #E7E7E7;
+  border-top: 0;
+}
+.panel-footer div.row {
+  margin-bottom: 35px;
+}
+#hours, #address {
+  line-height: 2;
+}
+#hours > span, #address > span {
+  font-size: 1.3em;
+}
+#address p {
+  color: #557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+#testimonials {
+  font-style: italic;
+}
+#testimonials p:nth-child(2) {
+  margin-top: 25px;
+}
+/* END FOOTER */
 #menu-tile, #specials-tile, #map-tile {
   height: 250px;
   width: 100%;
@@ -190,4 +219,3 @@ body {
     margin: 0 auto 15px;
   }
 }
-
