--- a/Job/css/styles.css
+++ b/Job/css/styles.css
@@ -120,7 +120,7 @@ body {
 /********** Large devices only **********/
 @media (min-width: 1200px) {
   .container .jumbotron {
-    background: url('../images/cali_1200.JPG') no-repeat;
+    background: url('../images/person_1200.jpg') no-repeat;
     height: 675px;
   }
 }
@@ -132,7 +132,7 @@ body {
 
   /* Home Page */
   .container .jumbotron {
-    background: url('../images/cali_992.JPG') no-repeat;
+    background: url('../images/person_992.jpg') no-repeat;
     height: 558px;
   }
   /* End Home Page */
@@ -141,7 +141,7 @@ body {
 @media (min-width: 768px) and (max-width: 991px) {
   /* Home Page */
   .container .jumbotron {
-    background: url('../images/cali_768.JPG') no-repeat;
+    background: url('../images/person_768.jpg') no-repeat;
     height: 432px;
   }
   /* End Home Page */
